--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,1 +1,99 @@
-_fonts.scss
+
+@font-face {
+    font-family: 'titillium_webblack';
+    src: url('../fonts/titilliumweb-black.woff2') format('woff2'),
+         url('../fonts/titilliumweb-black.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_webbold';
+    src: url('../fonts/titilliumweb-bold.woff2') format('woff2'),
+         url('../fonts/titilliumweb-bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_webbold_italic';
+    src: url('../fonts/titilliumweb-bolditalic.woff2') format('woff2'),
+         url('../fonts/titilliumweb-bolditalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_webthin';
+    src: url('../fonts/titilliumweb-extralight.woff2') format('woff2'),
+         url('../fonts/titilliumweb-extralight.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_webthin_italic';
+    src: url('../fonts/titilliumweb-extralightitalic.woff2') format('woff2'),
+         url('../fonts/titilliumweb-extralightitalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_webitalic';
+    src: url('../fonts/titilliumweb-italic.woff2') format('woff2'),
+         url('../fonts/titilliumweb-italic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_weblight';
+    src: url('../fonts/titilliumweb-light.woff2') format('woff2'),
+         url('../fonts/titilliumweb-light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_weblight_italic';
+    src: url('../fonts/titilliumweb-lightitalic.woff2') format('woff2'),
+         url('../fonts/titilliumweb-lightitalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_webregular';
+    src: url('../fonts/titilliumweb-regular.woff2') format('woff2'),
+         url('../fonts/titilliumweb-regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_websemibold';
+    src: url('../fonts/titilliumweb-semibold.woff2') format('woff2'),
+         url('../fonts/titilliumweb-semibold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium_websemibold_italic';
+    src: url('../fonts/titilliumweb-semibolditalic.woff2') format('woff2'),
+         url('../fonts/titilliumweb-semibolditalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
