--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,14 +6,10 @@ body {
 	font-family: 'titillium_webregular';
 	margin: 0;
 	padding: 0;
-	background: #fff;
-}
-
-h1 {
-	text-align: center;
 }
 
 .btnPopUp {
+	cursor: pointer;
 	text-align: center;
 	vertical-align: middle;
 
@@ -33,16 +29,10 @@ h1 {
 	}
 }
 
-.top {
-	position: relative;
-	padding: 5px;
-	background-color: #f9f9f9;
-}
-
 .popUp {
 	display: none;
 	width: 600px;
-	height: 410px;
+	height: auto;
 	background-color: #fff;
 
 	position: absolute;
@@ -54,19 +44,26 @@ h1 {
 
 	z-index: 1;
 }
-.close {
-	text-align: center;
 
-	background: #00A1E0 url('../images/close.svg') no-repeat center;
-	width: 18px;
-	height: 18px;
-	border-radius: 50%;
-
-	float: right;
+.top {
+	position: relative;
+	padding: 2px 5px;
+	background-color: #f9f9f9;
 	
-	// TODO: align vertical image
-	img {
-		margin-top: -2px;
+	.close {
+		text-align: center;
+
+		background: #00A1E0 url('../images/close.svg') no-repeat center;
+		width: 18px;
+		height: 18px;
+		border-radius: 50%;
+
+		float: right;
+	
+		// TODO: align vertical image
+		img {
+			margin-top: -2px;
+		}
 	}
 }
 
@@ -75,77 +72,37 @@ h1 {
 	padding: 0 12px 0 12px;
     cursor: pointer;
     background-color: #f9f9f9;
-
-	.icon {
-		text-align: center;
-		display: inline-block;
-		width: 38px;
-		height: 38px;
-		border-radius: 50%;
-		border: 1px solid #ccc;
-	}
-	span {
-		display: inline-block;
-		text-transform: uppercase;
-		color: #666;
-		font-size: 14px;
-		vertical-align: -webkit-baseline-middle;
-	}
-	.callInfolsHistory {
-		width: 25%;
-	    display: inline-block;
-	    vertical-align: text-bottom;
-	}	
-
-	.profile {
-		padding: 10px;
-
-		.photo {
-			display: inline-block;
-		}
-		.content {
-			position: relative;
-			display: inline-block;
-			width: 460px;
-			vertical-align: top;
-			.name {
-				vertical-align: top;
-				display: inline-block;
-				font-size: 22px;
-				color: #666;
-				.onLine {
-					display: inline-block;
-					padding: 5px;
-					border-radius: 50%;
-					background-color: #00D95A;
-					vertical-align: -webkit-baseline-middle;
-				}
-			}
-			.phoneNumber {
-				font-size: 22px;
-				color: #00A1E0;
-				display: inline-block;
-		    	vertical-align: top;
-		    	right: 0;
-		    	position: absolute;
-			}
-			.info {
-				display: block;
-
-				&:before {
-					content: url('../images/icon-info.svg');
-				}
-			}
-		}
-	}
 }
 
+.callsHistory {
+		width: 190px;
+	    display: inline-block;
+	    vertical-align: text-bottom;
+		
+		.icon {
+			text-align: center;
+			display: inline-block;
+			width: 38px;
+			height: 38px;
+			border-radius: 50%;
+			border: 1px solid #ccc;
+		}
 
+	    div {
+			display: inline-block;
+			text-transform: uppercase;
+			color: #666;
+			font-size: 14px;
+			vertical-align: -webkit-baseline-middle;
+		}
+}	
 
+// CALL INFO //
 .callInfo {
 	text-align: right;
-	width: 74%;
+	width: 66%;
 	display: inline-block;
+
 	.status {
 		display: inline-block;
 		
@@ -154,15 +111,22 @@ h1 {
 			vertical-align: -webkit-baseline-middle;
 		}
 	}
+
 	.timer {
 		display: inline-block;
-		font-size: 42px;
+		font-size: 50px;
 		color: #666;
 		padding: 0 10px;
 	}
+
 	.icon {
-		display: inline-block;
 		vertical-align: text-bottom;
+		text-align: center;
+		display: inline-block;
+		width: 38px;
+		height: 38px;
+		border-radius: 50%;
+		border: 1px solid #ccc;
 		
 		img {
 			vertical-align: middle;
@@ -170,45 +134,141 @@ h1 {
 	}
 }
 
-
-.history {
+// PROFILE
+.profile {
 	padding: 10px;
+
+	.photo {
+		display: inline-block;
+		border: 1px dashed #f0f0f0;
+	}
+
+	.content {
+		position: relative;
+		display: inline-block;
+		width: 460px;
+		vertical-align: top;
+
+		.name {
+			vertical-align: top;
+			display: inline-block;
+			font-size: 22px;
+			color: #666;
+		}
+		.onLine {
+			display: inline-block;
+			padding: 5px;
+			border-radius: 50%;
+			background-color: #00D95A;
+		}
+	}
+
+	.phoneNumber {
+		font-size: 22px;
+		color: #00A1E0;
+		display: inline-block;
+    	vertical-align: top;
+    	right: 0;
+    	position: absolute;
+	}
+
+	.info {
+		display: block;
+		margin: 5px;
+		color: #666;
+
+		&:before {
+			display: inline-block;
+			content: url('../images/icon-info.svg');
+			width: 7px;
+		}
+		div {
+			display: block;
+			color: #ccc;
+			a {
+				color: #ccc;
+				margin-left: 5px;
+			}	
+		}
+	}
+}
+
+// HISTORY //
+.history {
+	padding: 5px 30px;
+	height: 85px;
 
 	.phone {
 		text-align: center;
 		display: inline-block;
 		width: 62px;
 		height: 62px;
+		margin-right: 15px;
+
 		border-radius: 50%;
 		border: 1px solid #ccc;
+		vertical-align: -webkit-baseline-middle;
+
 		img{
 			top: 50%;
 			transform: translateY(-50%);
 		}
 	}
 
-	.log {
+	.logs {
 		display: inline-block;
+		vertical-align: -webkit-baseline-middle;
+
+		.log {
+			display: inline-block;
+
+			.title {
+				padding: 2px 5px;
+				text-transform: uppercase;
+				background: #ccc;
+				color: #fff;
+				border-radius: 5px;
+			}
+			.content {
+				text-align: center;
+				text-transform: uppercase;
+				color: #666;
+				padding: 5px;
+			}
+		}
+	}
+	.calls {
+		display: inline-block;
+
+		.select {
+			color: #666;
+			text-transform: uppercase;
+			&:after {
+				vertical-align: middle;
+				content: url('../images/arrow.svg');
+			}
+		}
 	}
 }
 
 
-
+// NOTES //
 .notes {
 	background-color: #ebeff2;
 	padding: 25px 5px 5px 5px; 
 
 	.title {
 		background-color: #ebeff2;
-		position: absolute;
-		text-align: center;
-		width: 250px;
-		padding: 5px;
-		margin: -35px auto 0 auto;
-		display: block;
-		border-radius: 5px;
+    	text-align: center;
+    	width: 250px;
+    	padding: 5px;
+    	margin: -40px auto 0 auto;
+    	display: block;
+    	border-radius: 5px;
 	}
 	.content {
+		border: 1px solid #ececec;
+		border-radius: 5px;
 		margin: 5px;
     	padding: 15px;
     	background-color: #fff;
