--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -49,7 +49,9 @@ body {
 	padding: 5px;
 	background-color: #f9f9f9;
 	border-radius: 5px;
-	
+	.logo img {
+		width: 63px;
+	}
 	.close {
 		text-align: center;
 		cursor: pointer;
@@ -57,13 +59,7 @@ body {
 		width: 18px;
 		height: 18px;
 		border-radius: 50%;
-
 		float: right;
-	
-		// TODO: align vertical image
-		img {
-			margin-top: -2px;
-		}
 	}
 }
 
@@ -150,7 +146,7 @@ body {
 
 // PROFILE
 .profile {
-	padding: 10px;
+	padding: 10px 10px 0 10px;
     margin-top: -50px;
 
 	.photo {
@@ -210,7 +206,7 @@ body {
 
 // HISTORY //
 .history {
-	padding: 5px 30px;
+	padding: 5px 25px;
 	height: 80px;
 
 	.phone {
@@ -228,7 +224,7 @@ body {
 	}
 
 	.logs {
-		min-width: 290px;
+		min-width: 300px;
 		display: inline-block;
 		vertical-align: -webkit-baseline-middle;
 
@@ -256,8 +252,11 @@ body {
 	.calls {
 		display: inline-block;
 		vertical-align: top;
+		margin-top: -10px;
 
 		.select {
+			font-family: 'titillium_weblight';
+			font-size: 15px;
 			color: #666;
 			text-transform: uppercase;
     		padding: 5px;
@@ -266,6 +265,30 @@ body {
 				vertical-align: top;
 				margin-left: 5px;
 				content: url('../images/arrow.svg');
+			}
+		}
+		.follow {
+			display: inline-block;
+			font-size: 12px;
+			color: #00A1E0;
+			margin: 0 5px;
+			
+			&:before {
+				text-align: center;
+				display: block;
+				content: url('../images/calendar.svg');
+			}
+		}
+		.note {
+			display: inline-block;
+			font-size: 12px;
+			color: #00A1E0;
+			margin: 0 5px;
+			
+			&:before {
+				text-align: center;
+				display: block;
+				content: url('../images/notes.svg');
 			}
 		}
 	}
