--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,12 +1,13 @@
 
 @import "_fonts";
+@import "_variables";
 
 html,
 body {
 	font-family: 'titillium_webregular';
 	margin: 0;
 	padding: 0;
-	color: #666;
+	color: $text-color;
 }
 
 .btnPopUp {
@@ -19,11 +20,10 @@ body {
 	bottom: 25px;
 	width: 70px;
 	height: 70px;
-	background-color: #00A1E0;
 	
 	border-radius: 50%;
 	box-shadow: 0px 0px 1px 6px #f2f2f2;
-	background: #00A1E0 url('../images/icon-logo.svg') no-repeat center center;
+	background: $main-color url('../images/icon-logo.svg') no-repeat center center;
 }
 
 .popUp {
@@ -55,7 +55,7 @@ body {
 	.close {
 		text-align: center;
 		cursor: pointer;
-		background: #00A1E0 url('../images/close.svg') no-repeat center;
+		background: $main-color url('../images/close.svg') no-repeat center;
 		width: 18px;
 		height: 18px;
 		border-radius: 50%;
@@ -89,7 +89,7 @@ body {
 	    	font-family: 'titillium_weblight';
 			display: inline-block;
     		text-transform: uppercase;
-    		color: #666;
+    		color: $text-color;
     		font-size: 14px;
     		vertical-align: top;
     		margin-top: 11px;
@@ -117,7 +117,7 @@ body {
     		font-size: 15px;
 
 			&.on {
-				background-color: #00D95A;
+				background-color: $online-color;
 			}
 			&.off {
 				background-color: #ccc;
@@ -128,7 +128,7 @@ body {
 	.timer {
 		display: inline-block;
 		font-size: 50px;
-		color: #666;
+		color: $text-color;
 		padding: 0 10px;
 	}
 
@@ -163,20 +163,20 @@ body {
 			vertical-align: top;
 			display: inline-block;
 			font-size: 22px;
-			color: #666;
+			color: $text-color;
 		}
 		.onLine {
 			display: inline-block;
 			padding: 6px;
 			border-radius: 50%;
-			background-color: #00D95A;
+			background-color: $online-color;
 		}
 	}
 
 	.phoneNumber {
 		text-decoration: underline;
 		font-size: 22px;
-		color: #00A1E0;
+		color: $main-color;
 		display: inline-block;
     	vertical-align: top;
     	right: 0;
@@ -186,7 +186,7 @@ body {
 	.info {
 		display: block;
 		margin: 10px 5px;
-		color: #666;
+		color: $text-color;
 
 		&:before {
 			display: inline-block;
@@ -244,7 +244,7 @@ body {
 				font-size: 15px;
 				text-align: center;
 				text-transform: uppercase;
-				color: #666;
+				color: $text-color;
 				padding: 5px;
 			}
 		}
@@ -257,7 +257,7 @@ body {
 		.select {
 			font-family: 'titillium_weblight';
 			font-size: 15px;
-			color: #666;
+			color: $text-color;
 			text-transform: uppercase;
     		padding: 5px;
 
@@ -270,7 +270,7 @@ body {
 		.follow {
 			display: inline-block;
 			font-size: 12px;
-			color: #00A1E0;
+			color: $main-color;
 			margin: 0 5px;
 			
 			&:before {
@@ -282,7 +282,7 @@ body {
 		.note {
 			display: inline-block;
 			font-size: 12px;
-			color: #00A1E0;
+			color: $main-color;
 			margin: 0 5px;
 			
 			&:before {
@@ -325,7 +325,7 @@ body {
 			text-transform: uppercase;
 			padding: 10px 25px;
     		border-radius: 5px;
-    		background-color: #00A1E0;
+    		background-color: $main-color;
     		color: #fff;
     		position: absolute;
     		right: 15px;
